# ciel-agent-framework

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TASKS.md  docker-compose.yml  generate_tasks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api-reference/: index.html
api-reference/adapters/: index.html
api-reference/cli/: index.html
api-reference/eval/: index.html
api-reference/gateway/: index.html
api-reference/observability/: index.html
api-reference/orchestration/: index.html
api-reference/providers/: index.html
api-reference/runtime/: index.html
api-reference/security/: index.html
api-reference/skills_lib/: index.html
api-reference/studio/: index.html
cookbook/: index.html
docs/: CHARTER.md  CI.md  Prompt.md  ROADMAP.md  UPGRADE_v0.3.0.md  index.md  roadmap.md  upgrade.md
examples/: end_to_end.py  enterprise_fase2.py  lowlevel_agent.py  quickstart_agent.py
roadmap/: index.html
scripts/: backup_state.py
sdk/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: acp_test.py  credentials_test.py  gateway_fase4_test.py  observability_test.py  orchestration_fase3_test.py  orchestration_queue_test.py  orchestration_test.py  orchestration_topology_test.py  providers_test.py  runtime_test.py  sandbox_test.py  security_test.py  serve_smoke_test.py  spec_dummy.yaml  test_agent_fase6_test.py  test_agent_memory_fase17_test.py  test_audit_fase7_test.py  test_board_persistence.py  test_chat_fase5_test.py  test_cognitive_state.py  test_cost_fase7_test.py  test_fase10_api_test.py  test_fase11_dx_test.py  test_fase12_agent_integration_test.py  test_fase12_cli_test.py  test_fase12_composition_test.py  test_fase12_docgen_test.py  test_fase12_metrics_test.py  test_fase12_skill_library_test.py  test_fase12_versioning_test.py  test_fase13_cost.py  test_fase13_studio_test.py  test_fase13_trace.py  test_fase14_ha_test.py  test_fase14_state_backend_test.py  test_fase15_sandbox_test.py  test_fase16_litellm_test.py  test_fase16_multimodal_test.py  test_fase16_providers_b_test.py  test_fase8_adapters_test.py  (+22 more)
upgrade/: index.html
(+219 files in other folders)
